Fix for result metadata word wrap.

--- a/assets/less/ev-script.less
+++ b/assets/less/ev-script.less
@@ -448,6 +448,7 @@ div.ev-results {
   .content-list {
     border-spacing: 0;
     width: 99%;
+    word-break: break-word;
     margin: auto;
     .even {
         background-color: @alt-gray;
